--- a/css/home.css
+++ b/css/home.css
@@ -22,6 +22,9 @@
 }
 
 @media screen and (max-width: 600px) {
+  .bodi {
+    height: 700px;
+  }
   .bodi .text {
     font-size: 35px;
     padding: 30px;
@@ -30,6 +33,9 @@
 }
 
 @media screen and (max-width: 500px) {
+  .bodi {
+    height: 600px;
+  }
   .bodi .text {
     font-size: 30px;
     padding: 30px;
@@ -38,6 +44,9 @@
 }
 
 @media screen and (max-width: 400px) {
+  .bodi {
+    height: 500px;
+  }
   .bodi .text {
     font-size: 25px;
     padding: 20px;
